# feishu-memory-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  deployment.md  installation.md  operations.md  tool-reference.md
docs/superpowers/plans/: 2026-07-02-feishu-memory-mcp.md
docs/superpowers/specs/: 2026-07-02-feishu-memory-mcp-design.md
skill/feishu-memory/: SKILL.md
src/mcp_memory/: __main__.py  cli.py  config.py  server.py  setup.py
src/mcp_memory/feishu/: bitable.py  docx.py  drive.py  runner.py  wiki.py
src/mcp_memory/index/: embedding_engine.py  reranker.py  rrf_merger.py  text_chunker.py  vector_index.py
src/mcp_memory/models/: record.py
src/mcp_memory/services/: __init__.py  bootstrap_service.py  memory_service.py  search_service.py  sync_service.py  upload_service.py
src/mcp_memory/storage/: local_cache.py  paths.py  schema.sql
tests/: test_cli.py  test_cli_smoke.py  test_config.py  test_import.py  test_server.py  test_setup.py
tests/feishu/: test_bitable.py  test_bitable_larkcli.py  test_bitable_live.py  test_docx_drive_wiki.py  test_runner.py
tests/index/: test_embedding_engine.py  test_reranker.py  test_rrf_merger.py  test_text_chunker.py  test_vector_index.py
tests/services/: test_bootstrap_service.py  test_memory_service.py  test_memory_service_wired.py  test_search_service.py  test_sync_service.py  test_sync_service_wired.py  test_upload_service.py
tests/storage/: test_local_cache_crud.py  test_local_cache_schema.py
